--- a/Navbar/navbar.html
+++ b/Navbar/navbar.html
@@ -7,6 +7,7 @@
     <title>Navbar</title>
 </head>
 <body>
+	<!--NAVBAR1!-->
 	<div class = "nav1">
 		<p class="logo1">Navbar</p>
 		<div class = "text-nav1">
@@ -16,6 +17,26 @@
 			<a href="" class = "link1">Page 3</a>
 		</div>
 	</div>
-	<main></main>
+
+	<!--NAVBAR2!-->
+	<div class = "nav2">
+		<div class = "logo-search">
+			<p class = "logo2">NavBar</p>
+			<div class = "search">
+					<input type = "text" name = "search" placeholder= "Busque um tema" class= "search-input">
+					<button class= "search-button" type="submit" value="Buscar" title="Buscar">Search</button>
+			</div> 
+		</div>
+		<div class = "text-nav2">
+			<a href="" class = "link2">Page 1</a>
+			<a href="" class = "link2">Page 2</a>
+			<a href="" class = "link2">Page 3</a>
+			<a href="" class = "link2">Page 4</a>
+			<a href="" class = "link2">Page 5</a>
+			<a href="" class = "link2">Page 6</a>
+			<a href="" class = "link2">Page 7</a>
+			<a href="" class = "link2">Page 8</a>
+		</div>
+	</div>
 </body>
 </html>
